  instead of BADUSER. The UNKNOWNERROR makes quite a few things complain. 

1.0.6 (07-18-06):
* Added an upgrade.sh script that can be run by the instance owner
  to replace the libraries. 
* Added the function char *vas_db2_plugin_get_version() to the
  sys-auth library, modified it to build with the version number, 
  install/upgrade now use it, and added tests for the version.
* Changed the memory test size to 11K, to put it at an odd allocation
  to differentiate it from other allocs.

1.0.7 (10-25-06):
* Some fixes for minor issues found in code review. 
* Added a Troubleshooting document.
* Added some specific debugging for a Stored Procedure issue.

1.0.8 (10-26-06):
* Refactor groups_for_user function to need no additional getpwnam calls, 
  instead storing the users pgid from the user_check to test group 
  membership with.
* Found the cause of the issue mentioned in 1.0.7. The SP had a grant 
  on a non-existent user, and the code was returning the wrong error
  code. Due to losing errno between functions, returned UNKNOWN_ERROR
  instead of BAD_USER. Fixed.

1.0.9 (11-1-06):
* Add an explicite lower to the check_user function. This fixes 
  grants on non-VAS users, as they come through upper-cased, 
  making the getpwnam not match. 

1.0.10 (11-21-06):
* Add 64-bit linux.     

1.0.11 (12-1-06):
* Added s390x Linux ( zSeries OS )
     
1.0.12 (12-11-06):
* Fixed s390x Linux. For unknown reason gcc wasn't setting __64BIT__ macro, 
  so some structure member sizes were off, leading to DB2 rejecting the plugin.  

1.0.13 ( 1-23-07 ):
* Added HP Itanium builds. Seperated into HPUX_9000 and HPUX_IA64 packages.    
* Better named the various packages.
* Made sure all OSes get __64BIT__ set if 64-bit, that macro is only guaranteed on AIX
  it seems.

1.0.14 ( 1-24-07 ):
* Final set of coverity fixes, mostly in the test code.     
* 100% code complete test_all, and various fringe cases. 42 tests all told.